--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "src/theme.scss"
             ],
             "scripts": [],
             "server": "src/main.server.ts",
@@ -95,12 +96,33 @@
               "src/assets"
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.scss"
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {
+            "version": 2
+          },
+          "configurations": {
+            "production": {
+              "buildTarget": "the-food-allergy-app:build:production",
+              "serveTarget": "the-food-allergy-app:serve:production"
+            },
+            "development": {
+              "buildTarget": "the-food-allergy-app:build:development",
+              "serveTarget": "the-food-allergy-app:serve:development"
+            }
+          },
+          "defaultConfiguration": "production"
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "addebbad-ad0c-4b90-bd73-0cc879d6e35c"
   }
 }
